[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cactis"
version = "0.0.2"
description="Coarse-grained Asymmetric Cycles in Time Series"
readme = "README.md"
authors = [
  { name = "Benjamin Jones", email = "jones657@msu.edu"},
  { name = "Kristin Kurianski", email = "kkurianski@fullerton.edu"},
  { name = "Miguel Lopez", email="mlopez3@sas.upenn.edu"},
  { name = "Christopher Potvin", email="cpotvin@warren-wilson.edu"},
  { name = "Sunia Tanweer", email="tanweer1@msu.edu"},
  { name = "Tobias Timofeyev", email="tobias.timofeyev@uvm.edu"}
]
requires-python = ">=3.10"
dependencies = [
  "pytest>=7.4.0",
  "gudhi>=3.11.0",
  "numpy>=2.2.5",
  "networkx",
  "matplotlib",
  "scipy", # dependency for networkx adjacency matrix
  "plotly",
  "nbformat>=4.2.0" # dependence for plotly
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cactis*"]


[tool.setuptools.package-data]
"cactis.Data" = ["**/*.npy", "**/*.txt", "**/*.nc"]